fix qualification tag on mobile

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -16,3 +16,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.text-hidden {
+    font-size: 0;
+}
